# cursorcliapi

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
codex_gateway/: claude_oauth.py  cli.py  codex_cli.py  codex_responses.py  config.py  gemini_cloudcode.py  openai_compat.py  server.py
scripts/: install_launchd.sh  serve.sh
