[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli-to-api"
version = "0.2.0"
description = "Expose agent CLIs as a small OpenAI-compatible HTTP API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agent-cli-to-api = "codex_gateway.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_gateway*"]
